--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "alpine-magic-helpers": "^1.2.2",
     "alpinejs": "^3.10.2",
     "axios": "^0.27.2",
     "connect-livereload": "^0.6.1",
