--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/public/js/app.js": "/public/js/app.js",
-    "/public/css/app.css": "/public/css/app.css"
+    "/public/css/app.css": "/public/css/app.css",
+    "/public/images/edireira.jpg": "/public/images/edireira.jpg"
 }
